P6-52 Refactoring